--- a/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
+++ b/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
@@ -77,6 +77,7 @@
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(DXSDK_DIR)lib\x86;$(LibraryPath)</LibraryPath>
+    <ReferencePath>../Header;$(ReferencePath)</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
