[Update] : 21:35분 오늘 수업자 Dialog까지 반영

--- a/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.rc
+++ b/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.rc
@@ -188,6 +188,26 @@ IDD_MYFORM DIALOGEX 0, 0, 320, 200
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
+    PUSHBUTTON      "UNITTOOL",IDC_BUTTON1,7,6,82,35
+END
+
+IDD_UNITTOOL DIALOGEX 0, 0, 320, 200
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "대화 상자"
+FONT 9, "MS Shell Dlg", 0, 0, 0x0
+BEGIN
+    DEFPUSHBUTTON   "확인",IDOK,263,179,50,14
+    EDITTEXT        IDC_EDIT1,51,7,49,24,ES_AUTOHSCROLL
+    LTEXT           "이름",IDC_STATIC,20,12,11,8
+    LTEXT           "체력",IDC_STATIC,20,40,11,8
+    LTEXT           "공격력",IDC_STATIC,20,70,17,8
+    EDITTEXT        IDC_EDIT2,50,33,49,24,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT3,50,63,49,24,ES_AUTOHSCROLL
+    LISTBOX         IDC_LIST1,108,7,88,113,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "PUSH",IDC_BUTTON1,7,90,100,30
+    CONTROL         "전사",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,15,133,26,10
+    CONTROL         "마법사",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,15,153,32,10
+    CONTROL         "궁수",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,15,173,26,10
 END
 
 
@@ -250,8 +270,21 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 313
+        VERTGUIDE, 89
+        TOPMARGIN, 6
+        BOTTOMMARGIN, 193
+    END
+
+    IDD_UNITTOOL, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 313
         TOPMARGIN, 7
         BOTTOMMARGIN, 193
+        HORZGUIDE, 31
+        HORZGUIDE, 59
+        HORZGUIDE, 90
+        HORZGUIDE, 120
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -263,6 +296,11 @@ END
 //
 
 IDD_MYFORM AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_UNITTOOL AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
