--- a/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
+++ b/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="Tool.h" />
     <ClInclude Include="ToolDoc.h" />
     <ClInclude Include="ToolView.h" />
+    <ClInclude Include="UnitTool.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.cpp" />
@@ -229,6 +230,7 @@
     <ClCompile Include="Tool.cpp" />
     <ClCompile Include="ToolDoc.cpp" />
     <ClCompile Include="ToolView.cpp" />
+    <ClCompile Include="UnitTool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Tool.rc" />
