[Updata] 파일입출력 + 데이터 삭제하기

--- a/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.rc
+++ b/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.rc
@@ -208,6 +208,9 @@ BEGIN
     CONTROL         "전사",IDC_RADIO1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,15,133,26,10
     CONTROL         "마법사",IDC_RADIO2,"Button",BS_AUTORADIOBUTTON,15,153,32,10
     CONTROL         "궁수",IDC_RADIO3,"Button",BS_AUTORADIOBUTTON,15,173,26,10
+    PUSHBUTTON      "저장하기",IDC_BUTTON2,200,13,50,14
+    PUSHBUTTON      "불러오기",IDC_BUTTON3,256,13,50,14
+    PUSHBUTTON      "삭제하기",IDC_BUTTON4,201,38,50,14
 END
 
 
