--- a/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
+++ b/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
@@ -195,13 +195,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractFactory.h" />
+    <ClInclude Include="BattleUnit.h" />
     <ClInclude Include="Device.h" />
+    <ClInclude Include="EditMgr.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MiniView.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="MultiTexture.h" />
     <ClInclude Include="MyForm.h" />
     <ClInclude Include="Obj.h" />
     <ClInclude Include="ObjMgr.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SingleTexture.h" />
     <ClInclude Include="stdafx.h" />
@@ -215,13 +219,17 @@
     <ClInclude Include="UnitTool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BattleUnit.cpp" />
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="EditMgr.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MiniView.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MultiTexture.cpp" />
     <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="Obj.cpp" />
     <ClCompile Include="ObjMgr.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="SingleTexture.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
