[Update] MapTool -> TapControl Add

--- a/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
+++ b/6일차-마우스 피킹, 스크롤 바 생성 및 창 분할/Tool/Tool.vcxproj
@@ -196,7 +196,10 @@
   <ItemGroup>
     <ClInclude Include="AbstractFactory.h" />
     <ClInclude Include="Device.h" />
+    <ClInclude Include="DlgTab1.h" />
+    <ClInclude Include="DlgTab2.h" />
     <ClInclude Include="MainFrm.h" />
+    <ClInclude Include="MapTool.h" />
     <ClInclude Include="MiniView.h" />
     <ClInclude Include="MultiTexture.h" />
     <ClInclude Include="MyForm.h" />
@@ -216,7 +219,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="DlgTab1.cpp" />
+    <ClCompile Include="DlgTab2.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="MapTool.cpp" />
     <ClCompile Include="MiniView.cpp" />
     <ClCompile Include="MultiTexture.cpp" />
     <ClCompile Include="MyForm.cpp" />
